--- a/Day36/backend/customer_paging.html
+++ b/Day36/backend/customer_paging.html
@@ -26,10 +26,10 @@
             </tr>
         </thead>
     </table>
-    {{currentPage}}
+
     <ul class="pagination">
-        <li v-for="page in pages" class="page-item" :class="{active: page==5}">
-            <a @click="currentPage=page" class="page-link" href="#">{{page}}</a>
+        <li v-for="page in pages" class="page-item" :class="{active: page==currentPage}">
+            <a @click="updatePage(page)" class="page-link" href="#">{{page}}</a>
         </li>
     </ul>
 </div>
@@ -53,6 +53,11 @@
             }
         },
         methods: {
+            updatePage: function(page) {
+                this.currentPage = page;
+                var start = (page-1)*this.pageSize;
+                this.customerList = this.allCustomerList.slice(start, start+this.pageSize);
+            },
             search: function() {
                 //alert(this.name);
                 this.customerList = this.allCustomerList.filter(c => c.name.includes(this.name));
@@ -66,7 +71,7 @@
                     phone: '012345678' + i 
                 })
             }
-            this.customerList = this.allCustomerList;
+            this.updatePage(1);
         }
     })
 </script>
