--- a/Day36/backend/customer_paging_server.html
+++ b/Day36/backend/customer_paging_server.html
@@ -46,8 +46,18 @@
             customerList : [],
             name: '',
         },
+        watch: {
+            currentPage: function() {
+                this.fetchData();
+            }
+        },
         methods: {
             search: async function() {
+                this.currentPage = 1;
+                this.fetchData();
+                
+            },
+            fetchData: async function() {
                 var response = await fetch('http://127.0.0.1:8000/api/get-customer-list?name='
                         +this.name + "&page=" + this.currentPage);
                 var result = await response.json();
