--- a/Day36/backend/html/create_customer.html
+++ b/Day36/backend/html/create_customer.html
@@ -2,22 +2,22 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
 
-<div class="container mt-3">
+<div id="app" class="container mt-3">
   <h4>Thông tin khách hàng</h4>
-  <form id="fmt">
+  <form @submit.prevent="saveCustomer()" id="fmt">
     <table class="table">
       <tbody>
         <tr>
           <th>Tên khách hàng:</th>
-          <td><input class="form-control"/></td>
+          <td><input class="form-control" name="name"/></td>
         </tr>
         <tr>
           <th>Số điện thoại:</th>
-          <td><input class="form-control"/></td>
+          <td><input class="form-control" name="phone"/></td>
         </tr>
         <tr>
           <th>Địa chỉ:</th>
-          <td><textarea class="form-control"></textarea></td>
+          <td><textarea class="form-control" name="address"></textarea></td>
         </tr>
       </tbody>
     </table>
@@ -26,11 +26,14 @@
 </div>
 <script>
   new Vue({
+    el: "#app",
     data: {
 
     },
     methods: {
-      
+      saveCustomer: async function(){
+        alert('save');
+      }
     }
   })
 </script>
