--- a/Day36/backend/html/order_product.html
+++ b/Day36/backend/html/order_product.html
@@ -61,6 +61,7 @@
     new Vue({
       el: "#app",
       data: {
+        id: null,
         product:{}
       },
       methods: {
@@ -69,8 +70,8 @@
       mounted: async function() {
         var href = window.location.toString();
         var pos = href.indexOf('?id=');
-        var id = href.substring(pos+4);
-        var url = 'http://127.0.0.1:8000/api/product/'+id;
+        this.id = href.substring(pos+4);
+        var url = 'http://127.0.0.1:8000/api/product/'+this.id;
         var resp = await fetch(url);
         this.product = await resp.json();
       }
