--- a/Day36/backend/html/product_detail.html
+++ b/Day36/backend/html/product_detail.html
@@ -29,7 +29,7 @@
           </tbody>
         </table>
         <a href='index.html' class="btn btn-secondary">Quay lại</a>
-        <a href='product_order.html' class="btn btn-primary">Mua hàng</a>
+        <a href='order_product.html' class="btn btn-primary">Mua hàng</a>
       </div>
     </div>
   </div>
