--- a/Day36/backend/html/order_product.html
+++ b/Day36/backend/html/order_product.html
@@ -56,7 +56,7 @@
             <th>Địa chỉ:</th>
             <td>
               <input name="cusomter_address" class="form-control">
-              <span v-if="errors.cusomter_address" style="color:red">{{errors.cusomter_address[0]}}</span>
+              <span v-if="errors.cusomter_address" style="color:red">{{errors.customer_phone[0]}}</span>
             </td>
           </tr>
           
