--- a/Day36/backend/html/order_product.html
+++ b/Day36/backend/html/order_product.html
@@ -55,8 +55,8 @@
           <tr>
             <th>Địa chỉ:</th>
             <td>
-              <input name="cusomter_address" class="form-control">
-              <span v-if="errors.cusomter_address" style="color:red">{{errors.customer_phone[0]}}</span>
+              <input name="customer_address" class="form-control">
+              <span v-if="errors.customer_address" style="color:red">{{errors.customer_address[0]}}</span>
             </td>
           </tr>
           
