--- a/Day38/vd1.html
+++ b/Day38/vd1.html
@@ -1,5 +1,8 @@
 <meta charset="UTF-8">
-<body>
+<script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
+<script src="https://unpkg.com/vue-router/dist/vue-router.js"></script>
+
+<body id="app">
     <div id="menu">
         <a href='index.html'>Trang chủ</a>
         <a href='about.html'>Giới thiệu</a>
@@ -12,3 +15,8 @@
         Bản quyền thuộc về @abcxyz
     </div>
 </body>
+<script>
+    new Vue({
+        el: '#app',
+    })
+</script>
