--- a/Day38/vd2.html
+++ b/Day38/vd2.html
@@ -3,6 +3,10 @@
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
+<script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
+<script src="https://unpkg.com/vue-router/dist/vue-router.js"></script>
+
+
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary p-0">
   <div class="navbar-nav">
     <a class="nav-item nav-link active" href="#">Tab 1</a>
