--- a/Day38/vd2.html
+++ b/Day38/vd2.html
@@ -6,32 +6,49 @@
 <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
 <script src="https://unpkg.com/vue-router/dist/vue-router.js"></script>
 
-
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary p-0">
-  <div class="navbar-nav">
-    <a class="nav-item nav-link active" href="#">Tab 1</a>
-    <a class="nav-item nav-link" href="#">Tab 2</a>
-    <a class="nav-item nav-link" href="#">Tab 3</a>
-  </div>
-
-  <ul class="navbar-nav ml-auto">
-    <li class="nav-item dropdown no-arrow">
-      <a class="nav-link dropdown-toggle p-0" data-toggle="dropdown" href="#">
-        <img class="rounded-circle" style="width:60px" src="https://raw.githubusercontent.com/pytutorial/html_samples/master/css_bootstrap/user.svg">
-      </a>
-      <div class="dropdown-menu dropdown-menu-right">
-        <a class="dropdown-item" href="#">
-          Thông tin tài khoản
+<div id="app">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary p-0">
+    <div class="navbar-nav">
+      <a class="nav-item nav-link active" href="#">Tab 1</a>
+      <a class="nav-item nav-link" href="#">Tab 2</a>
+      <a class="nav-item nav-link" href="#">Tab 3</a>
+    </div>
+  
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item dropdown no-arrow">
+        <a class="nav-link dropdown-toggle p-0" data-toggle="dropdown" href="#">
+          <img class="rounded-circle" style="width:60px" src="https://raw.githubusercontent.com/pytutorial/html_samples/master/css_bootstrap/user.svg">
         </a>
-        <div class="dropdown-divider"></div>
-        <a class="dropdown-item" href="#">
-          Đăng xuất
-        </a>
-      </div>
-    </li>
-  </ul>
-</nav>
+        <div class="dropdown-menu dropdown-menu-right">
+          <a class="dropdown-item" href="#">
+            Thông tin tài khoản
+          </a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="#">
+            Đăng xuất
+          </a>
+        </div>
+      </li>
+    </ul>
+  </nav>
+  
+  <router-view></router-view> 
+</div>
 
-<div class="container mt-3">
-  Tab 1 content
-</div> 
+<script>
+  const Page1 = {template: `<h3>Trang chủ</h3>`};
+  const Page2 = {template: `<h3>Trang 2</h3>`};
+  const Page3 = {template: `<h3>Trang 3</h3>`};
+
+  Vue.use(VueRouter);
+  const routes = [
+    {path: '/', component: Page1},
+    {path: '/page-2', component: Page2},
+    {path: '/page-3', component: Page3}
+  ];
+
+  new Vue({
+    el: '#app',
+    router: new VueRouter({routes})
+  })
+</script>
