--- a/Day38/vd2.html
+++ b/Day38/vd2.html
@@ -9,9 +9,9 @@
 <div id="app">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary p-0">
     <div class="navbar-nav">
-      <a class="nav-item nav-link active" href="#">Tab 1</a>
-      <a class="nav-item nav-link" href="#">Tab 2</a>
-      <a class="nav-item nav-link" href="#">Tab 3</a>
+      <router-link class="nav-item nav-link active" href="/">Trang chủ</router-link>
+      <router-link class="nav-item nav-link" to="/page-2">Trang 2</router-link>
+      <router-link class="nav-item nav-link" to="/page-3">Trang 3</router-link>
     </div>
   
     <ul class="navbar-nav ml-auto">
