--- a/Day38/vd2.html
+++ b/Day38/vd2.html
@@ -9,11 +9,11 @@
 <div id="app">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary p-0">
     <div class="navbar-nav">
-      <router-link class="nav-item nav-link active" to="/">Trang chủ</router-link>
-      <router-link class="nav-item nav-link" to="/page-2">Trang 2</router-link>
-      <router-link class="nav-item nav-link" to="/page-3">Trang 3</router-link>
+      <router-link class="nav-item nav-link" :class="{active: $route.meta.page==1}" to="/">Trang chủ</router-link>
+      <router-link class="nav-item nav-link" :class="{active: $route.meta.page==2}" to="/page-2">Trang 2</router-link>
+      <router-link class="nav-item nav-link" :class="{active: $route.meta.page==3}" to="/page-3">Trang 3</router-link>
     </div>
-  
+   
     <ul class="navbar-nav ml-auto">
       <li class="nav-item dropdown no-arrow">
         <a class="nav-link dropdown-toggle p-0" data-toggle="dropdown" href="#">
@@ -42,9 +42,9 @@
 
   Vue.use(VueRouter);
   const routes = [
-    {path: '/', component: Page1},
-    {path: '/page-2', component: Page2},
-    {path: '/page-3', component: Page3}
+    {path: '/', component: Page1, meta:{page:1}},
+    {path: '/page-2', component: Page2, meta:{page:2}},
+    {path: '/page-3', component: Page3, meta:{page:3}}
   ];
 
   new Vue({
