--- a/Day40/authorization/index.html
+++ b/Day40/authorization/index.html
@@ -1,5 +1,11 @@
 <script>
-    fetch('http://127.0.0.1:8000/api/hello')
+    var token = localStorage.getItem('token');
+    //alert(token);
+    var headers = {Authorization: 'Bearer '+ token};
+    fetch('http://127.0.0.1:8000/api/hello', {headers})
         .then(resp => resp.json())
         .then(result => alert(result.message));
+
+    //var resp = await fetch('http://127.0.0.1:8000/api/hello');
+    //var result = await resp.json();
 </script>
